# Audio-Normalizer

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  SETUP.md  USAGE.md  batch_normalize.bat  build.bat  clean_normalize.bat  cleanup_temp.bat  safe_normalize.bat  test_single.bat  vcpkg.json
src/: audio_normalizer.cpp  audio_normalizer.h  audio_processor.rs  fade.rs  main.cpp  main.rs  multi_format_processor.rs  normalizer.rs
